examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/fixpoint.st
language core;

extend with #fixpoint-combinator;


fn main(n : Nat) -> Nat {
  return fix(fn(y : Nat) { return true });
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
